Tisztogatás és Rólunk frissítés

--- a/abus.html
+++ b/abus.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <script src="sybi.js"></script>
     <title>Gkút - Rólunk</title>
 </head>
+
 <body class="bc" id="top">
     <header>
         <div class="topnav">
@@ -30,12 +32,31 @@
         </div>
     </header>
     <div>
-    <a href="#top"><span id="topbtn">&uarr;</span></a>
-    <div>
-        <h1>Csapatunkról</h1>
-        <p>Csapatunk 2023 telén alakult és egy cél lebegett a szemünk előtt</p>
-    </div>
-    
+        <a href="#top"><span id="topbtn">&uarr;</span></a>
+        <div class="row">
+            <div class="col-lg-12 col-sm-12 d2">
+                <h1 class="t1">Csapatunkról</h1>
+                <p class="t2">Csapatunk 2021 telén alakult amikor is csapatunk alapítói megnyertek egy kisebb esport versenyt.
+                    Azóta nem volt megállás. Mindenféle érdeklődésű emberekkel kezdték bővíteni a csapatot, belőlük
+                    alcsapatokat képezve, hogy őket is különböző versenyekre indítva. Bár oldalunkon csak a League of
+                    Legends-ről, a Minecraftról és a Gran Turismoról írtunk, felhozatalunk közel sem ennyire limitált.
+                    Jelen vagyunk még a Rainbow 6 Siege, CSGO és a Call of Duty esport színterén is, hol kisebb-hol
+                    nagyobb számokkal.
+                    Alapítóink álma, hogy csapataink minden lehetséges játékban a lehető legjobb helyezést érjék el. A Gémeskút
+                    csapat vagyunk, és azért jöttünk, hogy mélyből a magasba törjünk!</p>
+            </div>
+            <div class="d1">
+                <h1 class="t1">Alapítóinkról</h1>
+                <p class="t2">Alapítóink, a belső négyes a csapatunkat életbentartó szív. Bár mindannyian játékosokként kezdték,
+                    mára már szervezőkké és stratégákká váltak, akik felelős döntéseket hozva vezetik szervezetünket.
+                    Ennek ellenére ők sem vonultak vissza teljesen a frontvonalról.</p>
+            </div>
+            <div>
+                <h1 class="t1">Ha te is csatlakozni szeretnél hozzánk</h1>
+                <p></p>
+            </div>
+        </div>
+
     </div>
     <footer>
         <div class="row footer">
@@ -81,17 +102,18 @@
                 <p>Az alábbi linkeken megteheted:</p>
                 <div class="social-links">
                     <a href="https://www.instagram.com" target="_blank">
-                        <img src="icon1.png" alt="Instagramm" class="f-ikon">
+                        <img src="footer/icon1.png" alt="Instagramm" class="f-ikon">
                     </a>
                     <a href="https://www.facebook.com" target="_blank">
-                        <img src="icon2.png" alt="Facebook" class="f-ikon">
+                        <img src="footer/icon2.png" alt="Facebook" class="f-ikon">
                     </a>
                     <a href="https://twitter.com/?lang=hu" target="_blank">
-                        <img src="icon3.png" alt="Twitter" class="f-ikon">
+                        <img src="footer/icon3.png" alt="Twitter" class="f-ikon">
                     </a>
                     <br>
                 </div>
             </div>
     </footer>
 </body>
+
 </html>
