--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="grand.html">
                 <span class="linkpic">
                     <span>
-                        <img src="grand_linkpic.webp" alt="Gran Turismo" class="linkpic"></span>
+                        <img src="index_kepek/grand_linkpic.webp" alt="Gran Turismo" class="linkpic"></span>
                 </span>
                 <div class="overlayer">
                     <p class="overlayer_text">Gran Turismo</p>
@@ -49,7 +49,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 cont">
             <a href="lol.html">
                 <span class="linkpic">
-                    <img src="lol_linkpic.jpg" alt="League of Legends" class="linkpic">
+                    <img src="index_kepek/lol_linkpic.jpg" alt="League of Legends" class="linkpic">
                 </span>
                 <div class="overlayer">
                     <p class="overlayer_text">League of Legends</p>
@@ -60,7 +60,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 cont">
             <a href="mine.html">
                 <span class="linkpic">
-                    <img src="mine_linkpic2.jpeg" alt="Minecraft" class="linkpic">
+                    <img src="index_kepek/mine_linkpic2.jpeg" alt="Minecraft" class="linkpic">
                 </span>
                 <div class="overlayer">
                     <p class="overlayer_text">Minecraft</p>
@@ -71,7 +71,7 @@
         <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12 cont">
             <a href="abus.html">
                 <span id="tag">
-                    <img src="abus_linkpic4.jpg" alt="Rólunk" id="tag">
+                    <img src="index_kepek/abus_linkpic4.jpg" alt="Rólunk" id="tag">
                 </span>
                 <div class="overlayer">
                     <p class="overlayer_text">Rólunk</p>
@@ -124,13 +124,13 @@
                 <p>Az alábbi linkeken megteheted:</p>
                 <div class="social-links">
                     <a href="https://www.instagram.com" target="_blank">
-                        <img src="icon1.png" alt="Instagramm" class="f-ikon">
+                        <img src="footer/icon1.png" alt="Instagramm" class="f-ikon">
                     </a>
                     <a href="https://www.facebook.com" target="_blank">
-                        <img src="icon2.png" alt="Facebook" class="f-ikon">
+                        <img src="footer/icon2.png" alt="Facebook" class="f-ikon">
                     </a>
                     <a href="https://twitter.com/?lang=hu" target="_blank">
-                        <img src="icon3.png" alt="Twitter" class="f-ikon">
+                        <img src="footer/icon3.png" alt="Twitter" class="f-ikon">
                     </a>
                     <br>
                 </div>
