--- a/lol.html
+++ b/lol.html
@@ -248,13 +248,13 @@
             <p>Az alábbi linkeken megteheted:</p>
             <div class="social-links">
                 <a href="https://www.instagram.com" target="_blank">
-                    <img src="icon1.png" alt="Instagramm" class="f-ikon">
+                    <img src="footer/icon1.png" alt="Instagramm" class="f-ikon">
                 </a>
                 <a href="https://www.facebook.com" target="_blank">
-                    <img src="icon2.png" alt="Facebook" class="f-ikon">
+                    <img src="footer/icon2.png" alt="Facebook" class="f-ikon">
                 </a>
                 <a href="https://twitter.com/?lang=hu" target="_blank">
-                    <img src="icon3.png" alt="Twitter" class="f-ikon">
+                    <img src="footer/icon3.png" alt="Twitter" class="f-ikon">
                 </a>
                 <br>
             </div>
