--- a/abus.html
+++ b/abus.html
@@ -31,32 +31,97 @@
             </a>
         </div>
     </header>
-    <div>
-        <a href="#top"><span id="topbtn">&uarr;</span></a>
-        <div class="row">
-            <div class="col-lg-12 col-sm-12 d2">
-                <h1 class="t1">Csapatunkról</h1>
-                <p class="t2">Csapatunk 2021 telén alakult amikor is csapatunk alapítói megnyertek egy kisebb esport versenyt.
-                    Azóta nem volt megállás. Mindenféle érdeklődésű emberekkel kezdték bővíteni a csapatot, belőlük
-                    alcsapatokat képezve, hogy őket is különböző versenyekre indítva. Bár oldalunkon csak a League of
-                    Legends-ről, a Minecraftról és a Gran Turismoról írtunk, felhozatalunk közel sem ennyire limitált.
-                    Jelen vagyunk még a Rainbow 6 Siege, CSGO és a Call of Duty esport színterén is, hol kisebb-hol
-                    nagyobb számokkal.
-                    Alapítóink álma, hogy csapataink minden lehetséges játékban a lehető legjobb helyezést érjék el. A Gémeskút
-                    csapat vagyunk, és azért jöttünk, hogy mélyből a magasba törjünk!</p>
+    <a href="#top"><span id="topbtn">&uarr;</span></a>
+    <div class="row">
+        <div class="col-lg-12 col-sm-12 d2">
+            <h1 class="t1">Csapatunkról</h1>
+            <p class="t2">Csapatunk 2021 telén alakult amikor is csapatunk alapítói megnyertek egy kisebb esport
+                versenyt.
+                Azóta nem volt megállás. Mindenféle érdeklődésű emberekkel kezdték bővíteni a csapatot, belőlük
+                alcsapatokat képezve, hogy őket is különböző versenyekre indítva. Bár oldalunkon csak a League of
+                Legends-ről, a Minecraftról és a Gran Turismoról írtunk, felhozatalunk közel sem ennyire limitált.
+                Jelen vagyunk még a Rainbow 6 Siege, CSGO és a Call of Duty esport színterén is, hol kisebb-hol
+                nagyobb számokkal.
+                Alapítóink álma, hogy csapataink minden lehetséges játékban a lehető legjobb helyezést érjék el. A
+                Gémeskút
+                csapat vagyunk, és azért jöttünk, hogy mélyből a magasba törjünk!</p>
+        </div>
+        <div class="d1 col-lg-12 col-sm-12">
+            <h1 class="t1">Alapítóinkról</h1>
+            <p class="t2">Alapítóink, a belső négyes a csapatunkat életbentartó szív. Bár mindannyian játékosokként
+                kezdték,
+                mára már szervezőkké és stratégákká váltak, akik felelős döntéseket hozva vezetik szervezetünket.
+                Ennek ellenére ők sem vonultak vissza teljesen a frontvonalról és a csapat cipelésének terhe mit sem csorbított humorérzékükön.</p>
+        </div>
+    </div>
+    <div class="row d1">
+        <div class="fc-flex">
+            <div class="fc-flex-cont">
+                <div class="flip-card">
+                    <div class="flip-card-cont">
+                        <div class="fc-front">
+                            <h1>Kocsmár Dávid</h1>
+                            <p>A slusszkulcspörgető veszedelem</p>
+                            <p>A versenypályák rettegett fenegyereke</p>
+                        </div>
+                        <div class="fc-back">
+                            <img src="Rolunk_kepek/alapito 2.jpg" alt="Alapító1" class="fc-img">
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="d1">
-                <h1 class="t1">Alapítóinkról</h1>
-                <p class="t2">Alapítóink, a belső négyes a csapatunkat életbentartó szív. Bár mindannyian játékosokként kezdték,
-                    mára már szervezőkké és stratégákká váltak, akik felelős döntéseket hozva vezetik szervezetünket.
-                    Ennek ellenére ők sem vonultak vissza teljesen a frontvonalról.</p>
+            <div class="fc-flex-cont">
+                <div class="flip-card">
+                    <div class="flip-card-cont">
+                        <div class="fc-front">
+                            <h1>Czipri Gergő</h1>
+                            <p>Az éjjeli huhogászó</p>
+                            <p>A billentyűzetek és kertiszékek veszedelme</p>
+                        </div>
+                        <div class="fc-back">
+                            <img src="Rolunk_kepek/alapito1.jpg" alt="Alapító2" class="fc-img">
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div>
-                <h1 class="t1">Ha te is csatlakozni szeretnél hozzánk</h1>
-                <p></p>
+            <div class="fc-flex-cont">
+                <div class="flip-card">
+                    <div class="flip-card-cont">
+                        <div class="fc-front">
+                            <h1>Dornai Márk</h1>
+                            <p>A rettegett bajusz-király</p>
+                            <p>A dzsungelbéli asszasszinátor</p>
+                        </div>
+                        <div class="fc-back">
+                            <img src="Rolunk_kepek/alapito 2.jpg" alt="Alapító3" class="fc-img">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="fc-flex-cont">
+                <div class="flip-card">
+                    <div class="flip-card-cont">
+                        <div class="fc-front">
+                            <h1>Kovács Dániel</h1>
+                            <p>A kalapos alvajáró</p>
+                            <p>Az ösvényeken pusztító</p>
+                        </div>
+                        <div class="fc-back">
+                            <img src="Rolunk_kepek/alapito3.jpeg" alt="Alapító4" class="fc-img">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
+    </div>
+    <div class="row">
+        <div class="d2 col-lg-8 col-md-6 col-sm-12">
+            <h1 class="t1">Ha te is csatlakozni szeretnél hozzánk...</h1>
+            <p class="t3">Csatlakozz a Discord szerverünkhöz, ahol egy quiz vár amelynek a végén azon nyumban be is kerülsz az egyik csapatunkba. Ne felejtsd el elolvasni és követni a szabályzatot, nagyon könnyű kiesni az elején! Mutatsd meg hogy mit tudsz! Csatlakozz még ma!</p>
+        </div>
+        <div class="d2 col-lg-4 col-md-6 col-sm-12">
+            <iframe src="https://discord.com/widget?id=829370994203295794&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        </div>
     </div>
     <footer>
         <div class="row footer">
