--- a/abus.html
+++ b/abus.html
@@ -47,14 +47,14 @@
                 csapat vagyunk, és azért jöttünk, hogy mélyből a magasba törjünk!</p>
         </div>
         <div class="d1 col-lg-12 col-sm-12">
-            <h1 class="t1">Alapítóinkról</h1>
+            <h1 class="t1">Alapítóink</h1>
             <p class="t2">Alapítóink, a belső négyes a csapatunkat életbentartó szív. Bár mindannyian játékosokként
                 kezdték,
                 mára már szervezőkké és stratégákká váltak, akik felelős döntéseket hozva vezetik szervezetünket.
                 Ennek ellenére ők sem vonultak vissza teljesen a frontvonalról és a csapat cipelésének terhe mit sem csorbított humorérzékükön.</p>
         </div>
     </div>
-    <div class="row d1">
+    <div class=" d1">
         <div class="fc-flex">
             <div class="fc-flex-cont">
                 <div class="flip-card">
