--- a/mine.html
+++ b/mine.html
@@ -16,14 +16,14 @@
     <header>
         <div class="topnav">
             <div class="left">
-                <a href="index.html" class="topnav active">Kezdőlap</a>
+                <a href="index.html" class="topnav">Kezdőlap</a>
                 <a href="abus.html" class="topnav">Rólunk</a>
                 <div class="dropdown">
                     <button class="dropbtn">Kedvenc játékaink</button>
                     <div class="dropdown-romane-conti">
                         <a href="grand.html">Gran Turismo</a>
                         <a href="lol.html">League of Legends</a>
-                        <a href="mine.html">Minecraft</a>
+                        <a href="mine.html" class="active">Minecraft</a>
                     </div>
                 </div>
             </div>
