--- a/abus.html
+++ b/abus.html
@@ -15,8 +15,8 @@
     <header>
         <div class="topnav">
             <div class="left">
-                <a href="index.html" class="topnav active">Kezdőlap</a>
-                <a href="abus.html" class="topnav">Rólunk</a>
+                <a href="index.html" class="topnav">Kezdőlap</a>
+                <a href="abus.html" class="topnav active">Rólunk</a>
                 <div class="dropdown">
                     <button class="dropbtn">Kedvenc játékaink</button>
                     <div class="dropdown-romane-conti">
