--- a/grand.html
+++ b/grand.html
@@ -14,12 +14,12 @@
 <header>
     <div class="topnav">
         <div class="left">
-            <a href="index.html" class="topnav active">Kezdőlap</a>
+            <a href="index.html" class="topnav">Kezdőlap</a>
             <a href="abus.html" class="topnav">Rólunk</a>
             <div class="dropdown">
                 <button class="dropbtn">Kedvenc játékaink</button>
                 <div class="dropdown-romane-conti">
-                    <a href="grand.html">Gran Turismo</a>
+                    <a href="grand.html" class="active">Gran Turismo</a>
                     <a href="lol.html">League of Legends</a>
                     <a href="mine.html">Minecraft</a>
                 </div>
