Apró javítgatások, ellenőrzések

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <div class="topnav">
             <div class="left">
                 <a href="index.html" class="topnav">Kezdőlap</a>
-                <a href="abus.html" class="topnav active">Rólunk</a>
+                <a href="about.html" class="topnav active">Rólunk</a>
                 <div class="dropdown">
                     <button class="dropbtn">Kedvenc játékaink</button>
                     <div class="dropdown-romane-conti">
@@ -35,7 +35,7 @@
     <div class="row">
         <div class="col-lg-12 col-sm-12 d2">
             <h1 class="t1">Csapatunkról</h1>
-            <p class="t2">Csapatunk 2021 telén alakult amikor is csapatunk alapítói megnyertek egy kisebb esport
+            <p class="t2">Csapatunk 2021 telén alakult amikor is alapítóink megnyertek egy kisebb esport
                 versenyt.
                 Azóta nem volt megállás. Mindenféle érdeklődésű emberekkel kezdték bővíteni a csapatot, belőlük
                 alcsapatokat képezve, hogy őket is különböző versenyekre indítva. Bár oldalunkon csak a League of
