--- a/grand.html
+++ b/grand.html
@@ -15,7 +15,7 @@
     <div class="topnav">
         <div class="left">
             <a href="index.html" class="topnav">Kezdőlap</a>
-            <a href="abus.html" class="topnav">Rólunk</a>
+            <a href="about.html" class="topnav">Rólunk</a>
             <div class="dropdown">
                 <button class="dropbtn">Kedvenc játékaink</button>
                 <div class="dropdown-romane-conti">
@@ -349,7 +349,7 @@
                     <a href="index.html">Főoldal</a>
                 </li>
                 <li>
-                    <a href="abus.html">Rólunk</a>
+                    <a href="about.html">Rólunk</a>
                 </li>
                 <li>
                     <a href="grand.html">Gran Turismo bemutató</a>
