--- a/mine.html
+++ b/mine.html
@@ -48,167 +48,30 @@
       -->
         <h1>Kezdetek</h1>
 
-        A Minecraft nevű játékot Markus Persson indította útjára 2009-ben így már 14 éve és a Mojang adta ki 2011-ben
-        vagyis 12 éve.
+        <p>
+            A Minecraft nevű játékot Markus Persson indította útjára 2009-ben így már 14 éve és a Mojang adta ki 2011-ben
+            vagyis 12 éve.
+        </p>
 
-        Játékmenet
+        <h1>Játékmenet</h1>
 
-        Egy Véletleszerűe generált világba kerülünk és a célunk az Ender Dragon megtalálása és legyőzese. Nem kell
-        szigorúan követni ezt a célt mivel azt csinálunk ebben a világban amit szeretnénk és a legyőzése után sem lesz
-        vége a játéknak, de ezt szokták a játék végének nevezni és a <a href="https://www.speedrun.com/mc?h=Any_Glitchless-Random_Seed-1.16&x=mkeyl926-r8rg67rn.21d4zvp1-wl33kewl.4qye4731" target="_blank">Speedrun</a>-ok vége is ekkor van.
-
-        <h1>Mobok</h1>
-        <h2>Overworld</h2>
-        <h3>Békés</h3>
-        <figure>
-            <img src="minenhandwerkképek/bari.jpg" class="img2">
-            <figcaption>Bárány</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/Axolotl.jpg" class="img2">
-            <figcaption>Axolotl</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/chimken.jpg" class="img2">
-            <figcaption>Csirke</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/Mooshroom.jpg" class="img2">
-            <figcaption>Mooshroom</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/Pig.jpg" class="img2">
-            <figcaption>Disznó</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/tehén.jpg" class="img2">
-            <figcaption>Tehén</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/ocelot.jpg" class="img2">
-            <figcaption>Ocelot</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/Fox.jpg" class="img2">
-            <figcaption>Róka</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/Villager.jpg" class="img2">
-            <figcaption>Falusi</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/squid.PNG" class="img2">
-            <figcaption>Tintahal</figcaption>
-        </figure>
-
-        <h3>Semleges</h3>
-        <figure>
-            <img src="minenhandwerkképek/kutyus.jpg" class="img2">
-            <figcaption>Kutya</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/lama.jpg" class="img2">
-            <figcaption>Láma</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/Bee.jpg" class="img2">
-            <figcaption>Méh</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/iron.jpg" class="img2">
-            <figcaption>Iron gólem</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/jegesmaci.jpg" class="img2">
-            <figcaption>Jegesmedve</figcaption>
-        </figure>
-        <h3>Aggresszív</h3>
-        <figure>
-            <img src="minenhandwerkképek/Zombie.jpg" class="img2">
-            <figcaption>Zombi</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/Drowned.PNG" class="img2">
-            <figcaption>Drowned</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/skeli.jpg" class="img2">
-            <figcaption>Csontváz</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/stray.jpg" class="img2">
-            <figcaption>Stray</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/spid.jpg" class="img2">
-            <figcaption>Pók</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/Cavespid.jpg" class="img2">
-            <figcaption>Bányapók</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/Creeper.jpg" class="img2">
-            <figcaption>Creeper</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/slime.jpg" class="img2">
-            <figcaption>Nyálka</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/Vex.jpg" class="img2">
-            <figcaption>Vex</figcaption>
-        </figure>
-
-        <h2>Nether</h2>
-        <h3>Békés</h3>
-        <figure>
-            <img src="minenhandwerkképek/strider.PNG" class="img2">
-            <figcaption>strider</figcaption>
-        </figure>
-        <h3>Semleges</h3>
-        <h3>Aggresszív</h3>
-        <figure>
-            <img src="minenhandwerkképek/blaze.jpg" class="img2">
-            <figcaption>Blaze</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/ghast.jpg" class="img2">
-            <figcaption>Szellem</figcaption>
-        </figure>
-        <figure>
-            <img src="minenhandwerkképek/magmacube.jpg" class="img2">
-            <figcaption>Magmakocka</figcaption>
-        </figure>
-        <h3>Boss</h3>
-        <figure>
-            <img src="minenhandwerkképek/wither.jpg" class="img2">
-            <figcaption>Wither</figcaption>
-        </figure>
-        <h2>End</h2>
-
-        <h3>Semleges</h3>
-        <figure>
-            <img src="minenhandwerkképek/Enderman.jpg" class="img2">
-            <figcaption>Enderman</figcaption>
-        </figure>
-
-        <h3>Boss</h3>
-        <figure>
-            <img src="minenhandwerkképek/dragi.jpg" class="img2">
-            <figcaption>Ender Dragon</figcaption>
-        </figure>
-
+        <p>
+            Egy Véletleszerűe generált világba kerülünk és a célunk az Ender Dragon megtalálása és legyőzese. Nem kell
+            szigorúan követni ezt a célt mivel azt csinálunk ebben a világban amit szeretnénk és a legyőzése után sem lesz
+            vége a játéknak, de ezt szokták a játék végének nevezni és a <a href="https://www.speedrun.com/mc?h=Any_Glitchless-Random_Seed-1.16&x=mkeyl926-r8rg67rn.21d4zvp1-wl33kewl.4qye4731" target="_blank">Speedrun</a>-ok vége is ekkor van.
+        </p>
 
         <h1>Játékmódok</h1>
 
         <h2>Túlélő</h2>
 
         <p>Többféle nehézség van: </p>
-        Békés
-        Könnyű
-        Normál
-        Nehéz
+        <p>
+            Békés
+            Könnyű
+            Normál
+            Nehéz
+        </p>
 
         <p>Van életerőcsíkod és éhség is. A szörnyek támadnak minket (Csak Békés Mód felett). Túl kell élnünk és
             legyőzni az Ender Dragont</p>
@@ -222,18 +85,251 @@
 
         <h2>Hardcore</h2>
 
-        Ez hasonlít a Túlélő módhoz, de 2 fontos részben különböznek:
-        A nehézség véglegesen nehézre van állítva.
-        Ha meghalunk a világ VÉGLEGESEN eltűnik és soha nem játszatunk vele többet.
+        <p>
+            Ez hasonlít a Túlélő módhoz, de 2 fontos részben különböznek:
+            A nehézség véglegesen nehézre van állítva.
+            Ha meghalunk a világ VÉGLEGESEN eltűnik és soha nem játszatunk vele többet.
+        </p>
+
+        <h1>Mobok</h1>
+        <h2>Overworld</h2>
+        <h3>Békés</h3>
+        <div class="container">
+            <figure>
+                <img src="minenhandwerkképek/bari.jpg" class="img2">
+                <figcaption>Bárány</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/Axolotl.jpg" class="img2">
+                <figcaption>Axolotl</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/chimken.jpg" class="img2">
+                <figcaption>Csirke</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/Mooshroom.jpg" class="img2">
+                <figcaption>Mooshroom</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/Pig.jpg" class="img2">
+                <figcaption>Disznó</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/tehén.jpg" class="img2">
+                <figcaption>Tehén</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/ocelot.jpg" class="img2">
+                <figcaption>Ocelot</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/Fox.jpg" class="img2">
+                <figcaption>Róka</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/Villager.jpg" class="img2">
+                <figcaption>Falusi</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/squid.PNG" class="img2">
+                <figcaption>Tintahal</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/allay.PNG" class="img2">
+                <figcaption>Allay</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/béka.PNG" class="img2">
+                <figcaption>Béka</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/teki.PNG" class="img2">
+                <figcaption>Teknős</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/skeletonhorse.PNG" class="img2">
+                <figcaption>Csontvázló</figcaption>
+            </figure>
+        </div>
+
+        <h3>Semleges</h3>
+        <div class="container">
+            <figure>
+                <img src="minenhandwerkképek/kutyus.jpg" class="img2">
+                <figcaption>Kutya</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/lama.jpg" class="img2">
+                <figcaption>Láma</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/Bee.jpg" class="img2">
+                <figcaption>Méh</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/iron.jpg" class="img2">
+                <figcaption>Iron gólem</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/jegesmaci.jpg" class="img2">
+                <figcaption>Jegesmedve</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/delphin.PNG" class="img2">
+                <figcaption>Delfin</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/panda.PNG" class="img2">
+                <figcaption>Panda</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/kecske.PNG" class="img2">
+                <figcaption>Kecske</figcaption>
+            </figure>
+        </div>
+
+        <h3>Aggresszív</h3>
+        <div class="container">
+            <figure>
+                <img src="minenhandwerkképek/Zombie.jpg" class="img2">
+                <figcaption>Zombi</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/Drowned.PNG" class="img2">
+                <figcaption>Drowned</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/skeli.jpg" class="img2">
+                <figcaption>Csontváz</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/stray.jpg" class="img2">
+                <figcaption>Stray</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/spid.jpg" class="img2">
+                <figcaption>Pók</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/Cavespid.jpg" class="img2">
+                <figcaption>Bányapók</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/Creeper.jpg" class="img2">
+                <figcaption>Creeper</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/slime.jpg" class="img2">
+                <figcaption>Nyálka</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/Vex.jpg" class="img2">
+                <figcaption>Vex</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/illiger.PNG" class="img2">
+                <figcaption>Pillager</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/phantom.PNG" class="img2">
+                <figcaption>Phantom</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/warden.PNG" class="img2">
+                <figcaption>Warden</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/wirch.PNG" class="img2">
+                <figcaption>Boszorkány</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/silverfish.PNG" class="img2">
+                <figcaption>Silverfish</figcaption>
+            </figure>
+        </div>
 
 
+        <h2>Nether</h2>
+
+        <h3>Békés</h3>
+        <div class="container">
+            <figure>
+                <img src="minenhandwerkképek/strider.PNG" class="img2">
+                <figcaption>strider</figcaption>
+            </figure>
+        </div>
+
+        <h3>Semleges</h3>
+        <div class="container">
+            <figure>
+                <img src="minenhandwerkképek/piglin.PNG" class="img2">
+                <figcaption>Piglin</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/zombie piglin.PNG" class="img2">
+                <figcaption>Zombi Piglin</figcaption>
+            </figure>
+        </div>
+
+        <h3>Aggresszív</h3>
+        <div class="container">
+            <figure>
+                <img src="minenhandwerkképek/blaze.jpg" class="img2">
+                <figcaption>Blaze</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/ghast.jpg" class="img2">
+                <figcaption>Szellem</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/magmacube.jpg" class="img2">
+                <figcaption>Magmakocka</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/hoglin.PNG" class="img2">
+                <figcaption>Hoglin</figcaption>
+            </figure>
+        </div>
+
+            <div class="container">
+                <h3>Boss</h3>
+                <figure>
+                    <img src="minenhandwerkképek/wither.jpg" class="img2">
+                    <figcaption>Wither</figcaption>
+                </figure>
+            </div>
+        
+        <h2>End</h2>
+
+        <h3>Semleges</h3>
+        <div class="container">
+            <figure>
+                <img src="minenhandwerkképek/Enderman.jpg" class="img2">
+                <figcaption>Enderman</figcaption>
+            </figure>
+            <h3>Aggresszív</h3>
+            <figure>
+                <img src="minenhandwerkképek/shulker.PNG" class="img2">
+                <figcaption>Shulker</figcaption>
+            </figure>
+            <figure>
+                <img src="minenhandwerkképek/endermite.PNG" class="img2">
+                <figcaption>Endermite</figcaption>
+            </figure>
+        </div>
+
+        <h3>Boss</h3>
+        <div class="container">
+            <figure>
+                <img src="minenhandwerkképek/dragi.jpg" class="img2">
+                <figcaption>Ender Dragon</figcaption>
+            </figure>
+        </div>
 
 
-        Minigamek
+        
 
-        Modok
-
-        Legújabb frissítések
 
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12">
@@ -857,7 +953,9 @@
                         </li>
                     </ul>
                 </ul>
-                <img src="minenhandwerkképek/sniffi.jpg" alt="sniffer" title="sniffer" class="img">
+                <div class="container">
+                    <img src="minenhandwerkképek/sniffi.jpg" alt="sniffer" title="sniffer" class="img3">
+                </div>
             </div>
 
 
@@ -880,7 +978,9 @@
                         </li>
                     </ul>
                 </ul>
-                <img src="minenhandwerkképek/torchflower.png" alt="Torchflower" title="Fáklyavirág" class="img">
+                <div class="container">
+                    <img src="minenhandwerkképek/torchflower.png" alt="Torchflower" title="Fáklyavirág" class="img3">
+                </div>
             </div>
         </div>
 
@@ -893,7 +993,9 @@
                         Cseresznye erdő Biome-ot hozzáadtuk szép cseresznyefákkal.
                     </li>
                 </ul>
-                <img src="minenhandwerkképek/cherryblossom.jpg" alt="cherryblossom" title="cseresznyefa" class="img">
+                <div class="container">
+                    <img src="minenhandwerkképek/cherryblossom.jpg" alt="cherryblossom" title="cseresznyefa" class="img3">
+                </div>
             </div>
 
             <div class="col-lg-6 col-md-6 col-sm-12">
@@ -903,7 +1005,9 @@
                         Új fa szett cseresznyefából
                     </li>
                 </ul>
-                <img src="minenhandwerkképek/wood set.PNG" alt="cseresznyefa itemek" title="cseresznyefa szett" class="img">
+                <div class="container">
+                    <img src="minenhandwerkképek/wood set.PNG" alt="cseresznyefa itemek" title="cseresznyefa szett" class="img3">
+                </div>
             </div>
         </div>
 
